# todolist

./: .gitignore  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 0cf05ec4ed78_adicionando_updated_at.py  11f40d2d48aa_criando_tabela_de_usuarios.py
tests/: conftest.py  test_app.py  test_db.py
todolist/: app.py  models.py
