[project]
name = "float_tasks"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Emanoel", email = "pedroemanoeldasilvadeoliveira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
    "fastapi[standard] (>=0.137.1,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "sqlalchemy-stubs (>=0.4,<0.5)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.17,<0.16.0)",
    "pytest (>=9.1.0,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "harlequin (>=2.5.2,<3.0.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations', 'todolist/settings.py']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

# [tool.coverage.run]
# omit = [
#     "todolist/settings.py",
# ]

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'uvicorn todolist.app:app --reload'
pre_test = 'task lint'
test = 'pytest -s -x --cov=todolist --cov-report=term-missing -vv'
post_test = 'coverage html'